# nat

./: .gitignore  CMakeLists.txt  compile.sh  run.sh
bootstrap/: base.c  base.h  nativity.c  os.c  os.h
bootstrap/base/: command_line.c  command_line.h  core.h  math.c  math.h  memory.c  memory.h  project.c  project.h  string.c  string.h  target.h  thread.c  thread.h
bootstrap/os/: core.h  posix.c
bootstrap/os/core/: entry_point.c  posix_entry_point.c
